# goit-pyweb-hw-09

goit-pyweb-hw-09/: docker-compose.yml  pyproject.toml
goit-pyweb-hw-09/Scrapy_Mongo_1/: insert.py  models.py
goit-pyweb-hw-09/scrapy_proj/: scrapy.cfg
goit-pyweb-hw-09/scrapy_proj/spider_mongo/: items.py  middlewares.py  pipelines.py  settings.py
goit-pyweb-hw-09/scrapy_proj/spider_mongo/spiders/: main.py  main_m.py
